--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+.table-flag {
+    width: 50px;
+    max-width: 50px;
+    height: 25px;
+    max-height: 25px;
+}
