--- a/src/app/country/components/country-table/country-table.component.html
+++ b/src/app/country/components/country-table/country-table.component.html
@@ -14,10 +14,10 @@
             <tr *ngFor="let country of this.countries; let i = index">
                 <td>{{ i + 1 }}</td>
                 <td>{{ country.flag }}</td>
-                <td>{{ country.name.common }}</td>
+                <td>{{ country.capital }} | {{ country.name.common }}</td>
                 <td>{{ country.population | number}}</td>
                 <td>
-                    <a [href]="['/pais/', country.cca2]">Ver...</a>
+                    <a [routerLink]="['/pais/', country.cca2]" >Ver...</a>
                 </td>
             </tr>
         </tbody>
