--- a/src/app/country/pages/por-pais/por-pais.component.html
+++ b/src/app/country/pages/por-pais/por-pais.component.html
@@ -1,7 +1,11 @@
 <h2>Buscar pais</h2>
 <hr>
 
-    <app-form (onEnter)="this.onSearch( $event )"></app-form>
+    <app-form 
+        (onEnter)="this.onSearch( $event )"
+        (onDebounce)="this.onSuggestions( $event )"
+        placeholder="Buscar pais..."
+    ></app-form>
 
 <hr>
 
