--- a/src/app/country/components/country-table/country-table.component.html
+++ b/src/app/country/components/country-table/country-table.component.html
@@ -11,7 +11,9 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let country of this.countries; let i = index">
+            <tr *ngFor="let country of this.countries; let i = index"
+                class="animate__animated animate__fadeIn animate__faster"
+            >
                 <td>{{ i + 1 }}</td>
                 <td>{{ country.flag }}</td>
                 <td>{{ country.capital }} | {{ country.name.common }}</td>
