--- a/src/app/country/pages/por-region/por-region.component.html
+++ b/src/app/country/pages/por-region/por-region.component.html
@@ -1,1 +1,18 @@
-<p>por-region works!</p>
+
+<div class="row animate__animated animate__fadeIn animate__faster">
+    <h3>Buscar por region: {{ activeRegion | titlecase }}</h3>
+    <hr>
+    <div class="col">
+        <button *ngFor="let continent of continents"
+                [class]="getActiveElement(continent)"
+                (click)="setActiveRegion(continent)"
+        >
+            {{ continent | titlecase }}
+        </button>
+    </div>
+</div>
+
+<div *ngIf="countries.length > 0">
+    <app-country-table [countries]="countries" ></app-country-table>
+ </div>
+ 
